assets/css/app.css
* {
	color: #fff;
	text-decoration: none;
}

html {
  overflow-y: scroll;
}

body {
	margin: 0;
  font-family: sans-serif;
  background: url(/images/space.png) center no-repeat fixed;
  background-size: cover;
}

.content {
  position: relative;
  margin: 0 auto;
  max-width: 85%;
  background-color: #222;
  box-shadow: 4px 4px 4px 2px #888;
  opacity: 0.9;
  padding: 15px;
}

.socials {
  float: right;
}

.subtext {
  margin-top: 2%;
  margin-left: 4%;
  margin-right: 4%;
}

.content a {
	color: #19f;
}

.subtext h2 {
  margin-top: 40px;
}

.subtext p {
  margin-top: 30px;
}

.subtext li {
  margin-top: 10px;
}

.subtext pre {
  margin-top: 50px;
}

.separator {
	height: 120px;
}

.socials ul {
  padding: 10%;
  list-style-type: none;
}

.social {
  width: 90%;
}

header {
	background-color: #222;
	box-shadow: 1px 1px 4px 0 #888;
  position: absolute;
	width: 100%;
  z-index: 1;
}

header ul {
	margin: 0;
	padding: 0;
	list-style: none;
	overflow: hidden;
	background-color: #222;
}

header ul .subpage {
	text-decoration: none;
	display: block;
}

header ul .subpage:not(.flag_container) {
  padding-left: 20px;
  padding-right: 20px;
  line-height: 58px;
}

header ul .subpage:hover, .menu-icon:hover, .lang-icon:hover {
	background-color: #444;
}

header ul .subpage:active, .menu-icon:active, .lang-icon:active {
	background-color: #888;
}

li.item:not(:last-child) { 
  margin-bottom: 10px;  
}

.banner {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 90%;
}

.logo {
  vertical-align: middle;
}

.images {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  column-gap: 5%;
}

.cover {
  display: block;
  width: 75%;
  margin-top: 5%;
  margin-left: 70%;
}

.covercap {
  display: block;
  width: 72%;
  margin-left: 70%;
}

.textcenter {
  text-align: center;
}

.imgcenter {
  display: block;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  width: 65%;
}

.bigimg {
  display: block;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.mediumimg {
  display: block;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  width: 40%;
}

.smallimg {
  display: block;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  width: 25%;
}

.sourceimg {
  display: block;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  width: auto;
}

.boxedimg {
  display: block;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  border: 1px solid #888;
  max-width: 100%;
  width: auto;
}

.card {
  width: 50%;
}

figcaption {
  text-align: center;
  font-style: italic;
  padding: 10px;
  color: #BBB;
}

.nodot ul {
  list-style-type: none;
}

.nodot ul li {
  margin: 5px;
}

.nodot ul li img {
  vertical-align: middle;
  margin-bottom: 5px;
}

.nodot ul li img .gauge {
  width: 252px;
}

.nodot ul li img .coin {
  width: 32px;
}

.nodot ul li div {
  margin-left: 35px;
  margin-bottom: inherit;
  display: inline-block;
  width: 400px;
}

.box {
  height: 20px;
  width: 20px;
  border: 1px solid black;
}

.purple {
  background-color: #ff00ff;
}

.blue {
  background-color: #0000ff;
}

.green {
  background-color: #00ff00;
}

.yellow {
  background-color: #ffff00;
}

.red {
  background-color: #ff0000;
}

.tetra {
  margin-right: 1%;
  height: 200px;
}

table {
  margin-left: auto;
  margin-right: auto;
}

.animal {
  margin-right: 10px;
}

.noborder {
  border: none;
}

th {
  font-size: 32px;
  color: black;
  width: 120px;
  height: 120px;
  border: 1px solid #000
}

.character {
  width: 120px;
  height: 120px;
  cursor: pointer;
  display: inline-block;
}

.character:hover {
  background-color:#aaa;
}

.tss .character {
  background-image: url(/images/twinklestar/characters.png);
}

.kg .character {
  background-image: url(/images/kiohgyoku/characters.png);
}

.podd .character {
  background-image: url(/images/podd/characters.png);
}

.pofv .character {
  background-image: url(/images/pofv/characters.png);
}

.udoalg .character {
  background-image: url(/images/udoalg/characters.png);
}

.modal {
  position: fixed;
  z-index: 1;
  padding-top: 1%;
  padding-bottom: 1%;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.4);
}

.modal-header {
  padding: 2px 16px;
  background-color: #333;
  color: white;
  text-align: center;
}

.modal-body {
  padding: 2px 16px;
  max-height: 95vh;
  overflow-y: auto;
}

.modal-content {
  position: relative;
  background-color: #222;
  margin: auto;
  padding: 0;
  border: 1px solid #888;
  width: 60%;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
  animation-name: animatetop;
  animation-duration: 0.4s
}

.portrait {
  padding-top: 50px;
}

.stats {
  padding-left: 25px;
}

.stats .value {
  padding-left: 15px;
}

.portrait img {
  border: 1px solid #888;
}

#ss {
  background:radial-gradient(#552586,#804fb3,#b589d6)
}

#s {
  background:radial-gradient(#8b0000,#c54500,#ff8c00)
}

#a {
  background:radial-gradient(#ff8c00,orange,#ff0)
}

#b {
  background:radial-gradient(#ff0,#d6ff18,#adff2f)
}

#c {
  background:radial-gradient(#adff2f,#57a818,green)
}

#d {
  background:radial-gradient(#004040,#006060,teal)
}

#e {
  background:radial-gradient(teal,#00bfbf,#0ff)
}

#meirin {
  background-position: 120px;
}

#sprites {
  background-position: 240px;
}

#memory {
  background-position: 360px;
}

#mevious {
  background-position: 480px;
}

#darkran {
  background-position: 600px;
}

#griffon {
  background-position: 720px;
}

#tinker {
  background-position: 840px;
}

#kim {
  background-position: 960px;
}

#macky {
  background-position: 1080px;
}

#nanja {
  background-position: 1200px;
}

#yan {
  background-position: 1320px;
}

#schmitt {
  background-position: 1440px;
}

#till {
  background-position: 1560px;
}

#loadran {
  background-position: 1680px;
}

#yuuka_kg {
  background-position: 120px;
}

#muse {
  background-position: 240px;
}

#morgan {
  background-position: 360px;
}

#erich {
  background-position: 480px;
}

#marie {
  background-position: 600px;
}

#gates {
  background-position: 720px;
}

#meimai {
  background-position: 840px;
}

#milia {
  background-position: 960px;
}

#vivit {
  background-position: 1080px;
}

#yumemi {
  background-position: 120px;
}

#chiyuri {
  background-position: 240px;
}

#rikako {
  background-position: 360px;
}

#kana {
  background-position: 480px;
}

#kotohime {
  background-position: 600px;
}

#ellen {
  background-position: 720px;
}

#marisa_podd {
  background-position: 840px;
}

#mima {
  background-position: 960px;
}

#reimu_podd {
  background-position: 1080px;
}

#eiki {
  background-position: 120px;
}

#komachi {
  background-position: 240px;
}

#yuuka_pofv {
  background-position: 360px;
}

#medicine {
  background-position: 480px;
}

#aya {
  background-position: 600px;
}

#tewi {
  background-position: 720px;
}

#mystia {
  background-position: 840px;
}

#lunasa {
  background-position: 960px;
}

#merlin {
  background-position: 1080px;
}

#lyrica {
  background-position: 1200px;
}

#cirno {
  background-position: 1320px;
}

#reisen {
  background-position: 1440px;
}

#youmu {
  background-position: 1560px;
}

#sakuya {
  background-position: 1680px;
}

#marisa_pofv {
  background-position: 1800px;
}

#reimu_pofv {
  background-position: 1920px;
}

#zanmu {
  background-position: 120px;
}

#hisami {
  background-position: 240px;
}

#chiyari {
  background-position: 360px;
}

#enoko {
  background-position: 480px;
}

#biten {
  background-position: 600px;
}

#suika {
  background-position: 720px;
}

#yuuma {
  background-position: 840px;
}

#saki {
  background-position: 960px;
}

#yachie {
  background-position: 1080px;
}

#mamizou {
  background-position: 1200px;
}

#tsukasa {
  background-position: 1320px;
}

#rin {
  background-position: 1440px;
}

#seiran {
  background-position: 1560px;
}

#nazrin {
  background-position: 1680px;
}

#aunn {
  background-position: 1800px;
}

#ran {
  background-position: 1920px;
}

#sanae {
  background-position: 2040px;
}

#marisa_udoalg {
  background-position: 2160px;
}

#reimu_udoalg {
  background-position: 2280px;
}

h1 {
  margin-top: inherit;
}

header li {
  float: left;
}

header .menu, header .languages {
  clear: none;
  float: right;
  max-height: none;
}

header ul .subpage {
  border-left: 1px solid #888;
}

@media only screen and (max-width:1100px){
  .content {
    max-width: 100%;
  }

  .separator {
    height: 58px;
  }
}

